# task_agent

./: .gitignore  AGENTS.md  CLAUDE.md  TODO.md  pyproject.toml  setup.py  start_task_agent_webhook.bat  会话管理使用说明.md
agents/: file-edit.json  file-edit.md  file-edit.yaml  file-edit_linux.md  file-edit_linux.yaml  git-commit.json  git-commit.md  git-commit.yaml  git-commit_linux.md  git-commit_linux.yaml  web-search.json  web-search.md  web-search.yaml  web-search_linux.md  web-search_linux.yaml
builtin_plugins/: create_schedule.yaml
command_safety/: command_safety.yaml
docs/plans/: 2026-01-30-hint-runtime-constraints.md
hints/hello/: hint.md  hint.yaml  hint_linux.md  hint_linux.yaml
prompt_rules/: no_gci_recurse.yaml
src/task_agent/: __init__.py  agent.py  approval_execution_context.py  builtin_schema.py  cli.py  cli_output.py  command_approval_flow.py  command_runtime.py  command_spec.py  config.py  execution_event_bus.py  execution_event_types.py  (+8 more)
templates/: memory_filter_prompt.txt  memory_summary_prompt.txt  memory_terms_prompt.txt  system_prompt.txt  system_prompt_linux.txt
tests/: test_builtin_create_schedule.py  test_builtin_prompt_render.py  test_builtin_prompt_schema_sync.py  test_builtin_schema_parsing.py  test_builtin_workspace_paths.py  test_command_approval_flow.py  test_command_runtime.py  test_command_safety_regex.py  test_execution_event_bus.py  test_executor_skip_parse.py  test_resource_access.py  test_shell_command_parser.py  test_webhook_codex_protocol_mapping.py  test_webhook_direct_command.py  test_webhook_message_delivery_pipeline.py
(+32 files in other folders)
