[project]
name = "task-agent"
version = "0.1.0"
description = "通用任务执行 Agent，通过自然语言让 LLM 执行任意 bash 命令"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "MiniMax Agent"}
]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = []
gui = [
    "dearpygui>=1.10.0",
]
gradio = [
    "gradio>=5.0.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
task_agent = ["py.typed"]

[project.scripts]
task-agent = "task_agent.cli:main"
task-agent-gui = "task_agent.gui.app:main"
task-agent-gradio = "task_agent.gui.gradio_app:main"
